# IMLE

./: CMakeLists.txt
eigenSerializedLib/: CMakeLists.txt  EigenMatrixBaseSerialize.hpp  EigenSerialized.hpp  EigenSerializedDummy.cpp
eigenSerializedLib/cmake/modules/: FindEigen3.cmake
imleDemo/: CMakeLists.txt  imleDemo.cpp  imleDemoNoTemplates.cpp  imleDemo_common.hpp
imleLib/: CMakeLists.txt  expert.hpp  expertInline.hpp  imle.cpp  imle.hpp  imleInline.hpp
imleModule/: CMakeLists.txt  onlineLearner.cpp  onlineLearner.hpp  onlineLearnerMain.cpp
imleModuleDemo/: CMakeLists.txt  onlineLearnerQuery1.cpp  onlineLearnerQuery2.cpp  onlineLearnerUpdate.cpp
imleModuleDemo/conf/: imleCos.ini  onlineLearnerModule.ini
imleModuleDocs/: connectPorts.sh  imle.ini  imleCosZ.ini  imleICub.ini  imleModule_msg_protocol.txt  onlineLearnerModule.ini  startingIMLEdemo.txt
imlePython/: CMakeLists.txt  eigen_to_list.cpp  eigen_to_list.hpp  eigen_to_numpy.cpp  eigen_to_numpy.hpp  imlePython.cpp  imlePython.hpp  imle_pythonmod.cpp  setup.py
imlePython/imle/: __init__.py  imle.py  param.py
imlePython/notebooks/: demo1.ipynb  demo3.ipynb  simple_arm_demo.ipynb
